--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -15,7 +15,7 @@
   --dark-gray: #4a5568;
   --text-light: #ffffff;
   --text-dark: #2d3748;
-  --border-color: #cbd5e0;
+  --border-color: #0f58a7;
   --danger-red: #e53e3e;
   --danger-red-dark: #c53030;
 
